# Kenton

./: README.md
Agentic/Kenton/: .dockerignore  .env.example  API_INTEGRATION_GUIDE.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  INTEGRATION_REPORT.md  README.md  TEST_REPORT.md  agent_config.py  claude.md  consulting_brain_apis.mcp  conversation_manager.py  diagnose_api_key.py  docker-compose.yml  enhanced_api_server.py  env_config.py  fix_env_permanent.py  fixed_api_server.py  main.py  package.json  pyproject.toml  requirements.txt  run.py  start_all.sh  start_backend.sh  streamlined_api_server.py  task_complexity.py  test_41_models.py  test_dummy.py  test_mcp_integration.py  test_session_memory.py  test_weather_query.py  truly_simple_api.py
Agentic/Kenton/examples/: use_mcp_tools.py
Agentic/Kenton/frontend/: .env.development  .env.production  next.config.js  server.js
Agentic/Kenton/frontend/app/: globals.css  page.tsx
Agentic/Kenton/frontend/components/: ApiMonitor.tsx  EnhancedResearchApp.tsx  SimpleResearch.tsx  SimpleResearchApp.tsx  TerminalWindow.tsx
Agentic/Kenton/frontend/components/CenterPanel/: PromptInput.tsx  ResponseDisplay.tsx
Agentic/Kenton/frontend/components/Layout/: ThreeColumnLayout.tsx
Agentic/Kenton/tests/: test_api_tools.py  test_cli_web_consistency.py  test_financial_api.py  test_mcp_loader.py  test_reasoning.py  test_vector_search.py
Agentic/Kenton/tools/: api_tool_template.py  direct_mcp_tools.py  errors.py  file_search.py  financial_api.py  mcp_api_loader.py  vector_search.py  weather_api.py
(+8 files in other folders)
